Problem area alignment issues

--- a/css/theme.css
+++ b/css/theme.css
@@ -51,8 +51,25 @@ button:hover {
 .left {
   float: left;
 }
-.center {
-  float: center;
+
+.table {
+    display:table;
+    width:100%;
 }
-
-
+.tr {
+    display:table-row;
+}
+.d1 {
+    display:table-cell;
+    width:25%;
+}
+.d2 {
+    display:table-cell;
+    text-align:center;
+    width:50%;
+}
+.d3 {
+    display:table-cell;
+    text-align:right;
+    width:25%;
+}
